UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_Bid_Line_Product_Family__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipLabel>Bid Line Product Families</relationshipLabel>
        <relationshipName>Bid_Line_Product_Family</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_ASP_Dose__c</fullName>
        <label>Current ASP/ Dose</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Bottles__c</fullName>
        <label>Current Bottles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Doses__c</fullName>
        <label>Current Doses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Sales__c</fullName>
        <label>Current Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_TP_Margin_Percent__c</fullName>
        <label>Current TP Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_TP_Margin__c</fullName>
        <label>Current TP Margin $$$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Difference_ASP_Change__c</fullName>
        <label>Difference ASP % Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Difference_Bottles__c</fullName>
        <label>Difference Bottles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Difference_Doses__c</fullName>
        <label>Difference Doses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Difference_Margin__c</fullName>
        <label>Difference Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Difference_Price__c</fullName>
        <label>Difference Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Difference_Sales__c</fullName>
        <label>Difference Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Difference_Volume__c</fullName>
        <label>Difference Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Finance_Approval__c</fullName>
        <label>Finance Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Finance_Comments__c</fullName>
        <label>Finance Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_ASP_Dose__c</fullName>
        <label>Proposed ASP/ Dose</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Bottles__c</fullName>
        <label>Proposed Bottles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Budget_ASP__c</fullName>
        <label>Proposed Budget ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Doses__c</fullName>
        <label>Proposed Doses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Sales__c</fullName>
        <label>Proposed Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_TP_Margin_Percent__c</fullName>
        <label>Proposed TP Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_TP_Margin__c</fullName>
        <label>Proposed TP Margin $$$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_to_Budget__c</fullName>
        <label>Proposed % to Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Bid Line Product Family</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bid Line Product Family Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bid Line Product Family</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>